--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -892,6 +892,10 @@ input, textarea, select, button {
     border-radius: 20px;
 }
 
+.pricing-item__active {
+    box-shadow: 0px 20px 44px rgba(195, 108, 22, 0.06);
+}
+
 .pricing-item__type {
     font-size: 1.2rem;
     line-height: 1;
@@ -940,4 +944,137 @@ input, textarea, select, button {
 .pricing-item__item::before {
     content: url(../icons/check-orange.svg);
     margin-right: 14px;
+}
+
+/* Review */
+.review {
+    padding: 104px 0 52px;
+}
+
+.review__inner {
+    display: flex;
+    align-items: center;
+    column-gap: 44px;
+}
+
+.review__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    border: 1.5px solid #FFD1C4;
+    background: transparent;
+    color: #FF5B2E;
+}
+
+.review__control:nth-of-type(2) {
+    margin-left: auto;
+}
+
+.review__control:hover {
+    color: #FFF;
+    background: #FF5B2E;
+    border-color: #FF5B2E;
+    cursor: pointer;
+}
+
+.review__content {
+    overflow: hidden;
+}
+
+.review__list {
+    display: flex;
+}
+
+.review-item {
+    width: 100%;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    column-gap: 115px;
+}
+
+.review-item__media {
+    position: relative;
+    flex-shrink: 0;
+    margin-top: -52px;
+    width: 274px;
+    border-radius: 137px;
+}
+
+.review-item__media::after {
+    content: "";
+    position: absolute;
+    inset: auto 0 0 0;
+    height: 82%;
+    background: #FFDA54;
+    border-radius: inherit;
+}
+
+.review-item__img {
+    position: relative;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    border-radius: inherit;
+}
+
+.review-item__content {
+    margin-top: 28px;
+}
+
+.review-item__quote {
+    width: 553px;
+    margin-top: 24px;
+    font-size: 1.8rem;
+    line-height: 1.56;
+    color: #000000;
+}
+
+.review-item__author {
+    display: flex;
+    align-items: center;
+    margin-top: 34px;
+    font-family: 'Sora', sans-serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #282828;
+}
+
+.review-item__author::before {
+    display: inline-block;
+    content: "";
+    width: 20px;
+    height: 2px;
+    margin-right: 8px;
+    border-radius: 1px;
+    background: #000000;
+}
+
+.review__dots {
+    margin-top: 56px;
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    border: 1px solid #FF5B2E;
+}
+
+.review__dot:hover {
+    background: #FF5B2E;
+    cursor: pointer;
+}
+
+.review__dot--active {
+    width: 24px;
+    background: #FF5B2E;
 }
